Fix squished images

--- a/themes/hugo-coder/assets/scss/_base.scss
+++ b/themes/hugo-coder/assets/scss/_base.scss
@@ -232,6 +232,7 @@ table tr th:last-child {
 
 img {
   max-width: 100%;
+  height: inherit;
 }
 
 figure {
